--- a/TheIronyofLove.html
+++ b/TheIronyofLove.html
@@ -237,7 +237,7 @@ h1{
 		</div>
         <center>
 		<div>
-			<h1>THE IRON OF LOVE </h1>
+			<h1>THE IRONY OF LOVE </h1>
 		  </div>
 		  <div class="Exit page">
 			<a href="Bookshelf.html"> <img src="images/exitbutton.png" style="height: 100px; width: 100px;" alt=""></a>
