--- a/Bookshelf.html
+++ b/Bookshelf.html
@@ -31,6 +31,7 @@
   justify-self: center;
 }
 .book-grid ul img {
+  margin-left: 155px;
   display: block;
   box-shadow: 0px -5px 20px 2px rgba(0, 0, 0, 0.3);
   width: 200px;
