--- a/Bookshelf.html
+++ b/Bookshelf.html
@@ -32,8 +32,8 @@
 }
 .book-grid ul img {
   margin-left: 155px;
-  display: block;
-  box-shadow: 0px -5px 20px 2px rgba(0, 0, 0, 0.3);
+  display:block;
+  box-shadow: 0px -5px 20px 2px rgba(255, 241, 45, 0.466);
   width: 200px;
   height: 300px;
   -o-object-fit: cover;
@@ -68,8 +68,9 @@ body{
 }
 h2{
   text-align: center;
-  color: rgb(255, 196, 0);
+  color: rgb(253, 207, 56);
   font-size: xx-large;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 </style>
@@ -92,8 +93,8 @@ h2{
     <h2>GREEDINESS SECTION</h2>
     <ul>
     
-      <li> <a href="EliJourney.html"><img src="https://images-na.ssl-images-amazon.com/images/I/51uLvJlKpNL._SX321_BO1,204,203,200_.jpg"/></a></li>
-      <li> <a href="TheRealWealth.html"><img src="https://images-na.ssl-images-amazon.com/images/I/51uLvJlKpNL._SX321_BO1,204,203,200_.jpg"/></a></li>
+      <li> <a href="EliJourney.html"><img src="images/eli's jouney.png"/></a></li>
+      <li> <a href="TheRealWealth.html"><img src="images/the wealth.png"/></a></li>
    
     </ul>
   </div>
