--- a/Bookshelf.html
+++ b/Bookshelf.html
@@ -114,10 +114,10 @@ h2{
   <div class="shelf-shadows"></div>
   <div class="shelf"></div>
 </div>
-  
+  <center>
   <div>
-			<a href="http://localhost/cksmemoravilla/firstpage.html"> <img src="images/exitbutton.png" style="height: 100px; width: 100px;" alt=""></a>
-		  </div>
+			<a href="http://localhost/cksmemoravilla/firstpage.html"> <img src="images/exitbutton.png" style=" height: 100px; width: 100px;" alt=""></a>
+		  </div></center>
 
 <audio controls autoplay style="opacity: 0;">
   <source src="music/bgmfinal.mp3" type="audio/ogg">
